@@ -1,6 +1,7 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Fix LDAP contact update when RDN field is changed (#1485788)
 - Fix LDAP attributes case senitivity problems (#1485830)
 - Fix LDAP addressbook browsing when only one directory is used (#1486022)
 - Fix endless loop on error response for APPEND command (#1486060)
